--- a/blackpill_robot_401.ioc
+++ b/blackpill_robot_401.ioc
@@ -1,24 +1,29 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
+I2C2.I2C_Mode=I2C_Standard
+I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM4
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=I2C2
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM4
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA9
-Mcu.Pin1=PA10
-Mcu.Pin2=PB6
-Mcu.Pin3=PB7
-Mcu.Pin4=PB8
-Mcu.Pin5=PB9
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin0=PB10
+Mcu.Pin1=PA9
+Mcu.Pin2=PA10
+Mcu.Pin3=PB3
+Mcu.Pin4=PB6
+Mcu.Pin5=PB7
+Mcu.Pin6=PB8
+Mcu.Pin7=PB9
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -42,6 +47,10 @@ PA10.Signal=USART1_RX
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB3.Mode=I2C
+PB3.Signal=I2C2_SDA
 PB6.Locked=true
 PB6.Signal=S_TIM4_CH1
 PB7.Locked=true
